--- a/ITstepCppFilesStart.vcxproj
+++ b/ITstepCppFilesStart.vcxproj
@@ -129,11 +129,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Employees.cpp" />
-    <ClCompile Include="FileProviderForEmployees.cpp" />
+    <ClCompile Include="FileProviderEmployees.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employees.h" />
-    <ClInclude Include="FileProviderForEmployees.h" />
+    <ClInclude Include="FileProviderEmployees.h" />
     <ClInclude Include="lib.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
