--- a/ITstepCppFilesStart.vcxproj
+++ b/ITstepCppFilesStart.vcxproj
@@ -128,6 +128,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="file_all_functions.cpp" />
+    <ClCompile Include="boards.cpp" />
+    <ClCompile Include="tasks.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="file_all_functions.h" />
+    <ClInclude Include="boards.h" />
+    <ClInclude Include="tasks.h" />
+    <ClInclude Include="lib.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
